--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,5 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+
+venv/
